2001-02-28  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (w3m-content-type-alist): Accept .htm as text/html.
	(w3m-backlog-enter): Add code to memory w3m-current-title.
	(w3m-backlog-request): Resume w3m-current-title from backlog data.
	(w3m-html-decode-buffer): Change arguments spec.
	(w3m-rendering-region): Removed code to set w3m-current-url.
	(w3m-exec): Fix bug of proecessing text/plain files and changed
	data format to preserve in backlog.

2001-02-28  Shun-ichi GOTO  <gotoh@taiyo.co.jp>

	* w3m.el: Support XEmacs using APEL.
	(w3m-fontify): Delete <?XML ... ?> tag for XHTML page.
	(w3m-input-url): Do not use 7th arg of completing-read
	for XEmacs support.
	(w3m-bookmark-save): Check bookmark file is writable.

2001-02-28  Shun-ichi GOTO  <gotoh@taiyo.co.jp>

	* w3m.el (w3m-bookmark-add): Fix problem of adding bookmark first
	time.

2001-02-28  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el: Reconstructed drastically and removed w3 depended codes.

2001-02-28  Shun-ichi GOTO  <gotoh@taiyo.co.jp>

	* w3m.el (w3m-executable-type): New variable.
	(w3m-cygwin-path): New function.
	(w3m-region): New function.

2001-02-26  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (w3m-fontify): Add code to decode w3m-specific extended
	charcters.
	(w3m-extended-charcters-table): New constant.

2001-02-08  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-async-exec): New customizable variable.
	(w3m-exec-process): Use 'w3m-async-exec' instead of 'w3m-process-type'.

2001-02-07  Shun-ichi GOTO  <gotoh@taiyo.co.jp>

	* w3m.el: Fixed small and thoughtless bugs...
	(w3m-bookmark-file-modified-p): Bug fix.
	(w3m-bookmark-save): Bug fix. Don't forget time stamp updating.
	(w3m-bookmark-add): Bug fix. Function name miss-typing.

2001-02-07  Shun-ichi GOTO  <gotoh@taiyo.co.jp>

	* w3m.el: Add bookmark operations. This feature is very ad-hoc.
	Support loading w3m's bookmark file into internal bookmark data,