@@ -1,3 +1,9 @@
+2001-03-01  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
+
+	* w3m.el (w3m-http-retrieve): Add adhoc fragment to avoid new-line
+	replacement.
+	(w3m-decode-buffer): Renamed from w3m-html-decode-buffer.
+
 2001-02-28  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
 
 	* w3m.el (w3m-content-type-alist): Accept .htm as text/html.
